--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,11 @@
 ---
 ---
-
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: $body-text-color;
+}
 @import "{{ site.theme }}";
