--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,30 @@
 ---
 ---
 body {
-  padding: 0;
-  margin: 0;
-  font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
+  font-size: 15px;
+  font-weight: 400;
   line-height: 1.5;
-  color: $body-text-color;
+  color: #666;
+  background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
+}
+
+p {
+  margin-top: 0;
+}
+
+a {
+  color: #2879d0;
+}
+a:hover {
+  color: #2268b2;
+}
+
+header {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
+  border-bottom: solid 1px #275da1;
 }
 @import "{{ site.theme }}";
