--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ a:hover {
   color: #2268b2;
 }
 
-header {
+page-header {
   padding-top: 40px;
   padding-bottom: 40px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
