--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         <a href="https://github.com/ArhumJain" class="btn">Github</a>
+        <a href="https://www.youtube.com/watch?v=R_FQU4KzN7A&t=1s" class="btn">Buy Me a Potion</a>
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
