--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,5 +2,19 @@
 ---
 @import "{{ site.theme }}";
 .project-name {
+  margin-top: 0;
+  margin-bottom: 0.1rem;
   font-family: 'Architects Daughter';
+  
+  @include large {
+    font-size: 3.25rem;
+  }
+
+  @include medium {
+    font-size: 2.25rem;
+  }
+
+  @include small {
+    font-size: 1.75rem;
+  }
 }
