--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,21 @@
 ---
 ---
 @import "{{ site.theme }}";
+.page-header {
+  color: #fff;
+  text-align: center;
+  background-color: #159957;
+  background-image: linear-gradient(120deg, #1a1b27, #2f3080);
+
+  @include large {
+    padding: 5rem 6rem;
+  }
+
+  @include medium {
+    padding: 3rem 4rem;
+  }
+
+  @include small {
+    padding: 2rem 1rem;
+  }
+}
