--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 @import "{{ site.theme }}";
 
-body.page-header {
+#page-header {
   color: #fff;
   text-align: center;
   background-color: #159957;
