--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,10 @@
 
 @import "{{ site.theme }}";
 
-#page-header {
+.test {
+  color: #ff002f
+}
+.page-header {
   color: #fff;
   text-align: center;
   background-color: #159957;
