--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -2,6 +2,7 @@
 @import "rouge-github";
 @import "variables";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@377&display=swap');
 
 @mixin large {
   @media screen and (min-width: #{$large-breakpoint}) {
@@ -125,6 +126,7 @@ a {
 }
 
 .project-name {
+  font-family: "Stick No Bills";
   margin-top: 0;
   margin-bottom: 0.1rem;
 
