--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -186,7 +186,7 @@ a {
   }
   
   kbd {
-    background-color: #010409;
+    background-color: #fafbfc;
     border: 1px solid #c6cbd1;
     border-bottom-color: #959da5;
     border-radius: 3px;
