--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,7 +8,7 @@ $header-bg-color: #2f3080 !default;
 $header-bg-color-secondary: #1a1b27 !default;
 
 // Text
-$section-headings-color: #159957 !default;
+$section-headings-color: #38bcad !default;
 $body-text-color: #606c71 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
