body text color

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -9,7 +9,7 @@ $header-bg-color-secondary: #1a1b27 !default;
 
 // Text
 $section-headings-color: #38bcad !default;
-$body-text-color: #606c71 !default;
+$body-text-color: #eefcff !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
 
