--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
       {% if site.github.is_project_page %}
         <a href="https://github.com/ArhumJain" class="btn">Github</a>
         <a href="https://www.youtube.com/watch?v=bSiEB64FyF8" class="btn">Buy Me a Potion</a>
+        <a href="https://lingojam.com/StandardGalacticAlphabet" class="btn">Galactic Translator</a>
       {% endif %}
     </header>
 
