--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,8 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
-
+      <a class="btn">Back to top onclick="audio.play();"</a>
+      <script type="text/javascript"> const audio = new Audio(); audio.src = "./assets/Never Gonna Give You Up Original.mp3"; </script>
       <footer class="site-footer">
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">This site</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
