--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
-      <a class="btn">Back to top onclick="audio.play();"</a>
+      <a class="btn" onclick="audio.play();">Back to top</a>
       <script type="text/javascript"> const audio = new Audio(); audio.src = "./assets/Never Gonna Give You Up Original.mp3"; </script>
       <footer class="site-footer">
         {% if site.github.is_project_page %}
