--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <a href="https://github.com/ArhumJain" class="btn">Github</a>
         <a href="https://www.youtube.com/watch?v=bSiEB64FyF8" class="btn">Buy Me a Potion</a>
         <a href="https://lingojam.com/StandardGalacticAlphabet" class="btn">Galactic Translator</a>
-        <a class="btn" href="" onclick="audio.play();">Back to top</a>
+        <a class="btn" href="#" onclick="audio.play();">Back to top</a>
         <script type="text/javascript"> const audio = new Audio(); audio.src = "./assets/Never Gonna Give You Up Original.mp3"; </script>
       {% endif %}
     </header>
