--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,13 +22,13 @@
         <a href="https://github.com/ArhumJain" class="btn">Github</a>
         <a href="https://www.youtube.com/watch?v=bSiEB64FyF8" class="btn">Buy Me a Potion</a>
         <a href="https://lingojam.com/StandardGalacticAlphabet" class="btn">Galactic Translator</a>
-        <a class="btn" href="#" onclick="audio.play();">Back to top</a>
-        <script type="text/javascript"> const audio = new Audio(); audio.src = "./assets/Never Gonna Give You Up Original.mp3"; </script>
       {% endif %}
     </header>
 
     <main id="content" class="main-content" role="main">
       {{ content }}
+      <a class="btn" href="#" onclick="audio.play();">Back to top</a>
+      <script type="text/javascript"> const audio = new Audio(); audio.src = "./assets/Never Gonna Give You Up Original.mp3"; </scri
       <footer class="site-footer">
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">This site</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
