--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -136,7 +136,7 @@ a {
   margin-top: 0;
   margin-bottom: 0.1rem;
   animation-name: fadeIn;
-  animation-duration: 3s;
+  animation-duration: 2s;
   @include large {
     font-size: 3.25rem;
   }
@@ -153,6 +153,9 @@ a {
 .project-tagline {
   margin-bottom: 2rem;
   font-weight: normal;
+  animation-name: fadeIn;
+  animation-duration: 2s;
+  animation-delay: 0.5s;
   opacity: 0.7;
 
   @include large {
