--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,9 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-        <a href="https://github.com/ArhumJain" class="btn">Github</a>
-        <a href="https://www.youtube.com/watch?v=bSiEB64FyF8" class="btn">Buy Me a Potion</a>
-        <a href="https://lingojam.com/StandardGalacticAlphabet" class="btn">Galactic Translator</a>
+        <a href="https://github.com/ArhumJain" class="btn" id="githubBtn">Github</a>
+        <a href="https://www.youtube.com/watch?v=bSiEB64FyF8" class="btn" id="potionBtn">Buy Me a Potion</a>
+        <a href="https://lingojam.com/StandardGalacticAlphabet" class="btn" id="galacticBtn">Galactic Translator</a>
       {% endif %}
     </header>
 
