--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -156,6 +156,7 @@ a {
   animation-name: fadeIn;
   animation-duration: 2s;
   animation-delay: 0.5s;
+  animation-fill-mode: both;
   opacity: 0.7;
 
   @include large {
