--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -111,7 +111,11 @@ a {
     }
   }
 }
-
+#githubBtn {
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-delay: 1s;
+}
 .page-header {
   color: $header-heading-color;
   text-align: center;
