--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -115,6 +115,22 @@ a {
   animation-name: fadeIn;
   animation-duration: 1s;
   animation-delay: 1s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-in;
+}
+#potionBtn {
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-delay: 1.3s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-in;
+}
+#galacticBtn {
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-delay: 1.6s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-in;
 }
 .page-header {
   color: $header-heading-color;
