--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -160,6 +160,8 @@ a {
   margin-bottom: 0.1rem;
   animation-name: fadeIn;
   animation-duration: 2s;
+  animation-timing-function: ease-in;
+  
   @include large {
     font-size: 3.25rem;
   }
@@ -180,6 +182,8 @@ a {
   animation-duration: 2s;
   animation-delay: 0.5s;
   animation-fill-mode: both;
+  animation-timing-function: ease-in;
+  
   opacity: 0.7;
 
   @include large {
@@ -197,7 +201,12 @@ a {
 
 .main-content {
   word-wrap: break-word;
-
+  animation-name: fadeIn;
+  animation-duration: 2s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-in;
+  animation-delay: 1.8s;
+  
   :first-child {
     margin-top: 0;
   }
